--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -30,7 +30,7 @@ website:
           - guide/configuration/customize-your-dashboard.qmd
         - text: "---"
         - text: "Model Workflows"
-        - text: "Setting up workflows"
+        - text: "Setting up model workflows"
           file: guide/model-workflows/setting-up-model-workflows.qmd
           contents:
           - guide/model-workflows/manage-model-stages.qmd
