Save point for footer rework

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -352,8 +352,8 @@ website:
           <div class="footer-section">
             <div class="footer-heading">ValidMind Library</div>
             <ul>
-              <li><a href="/developer/validmind-library.qmd">For model development</a></li>
-              <li><a href="/developer/validmind-library.qmd#validation">For model validation</a></li>
+              <li><a href="/developer/validmind-library.qmd">For developers</a></li>
+              <li><a href="/developer/validmind-library.qmd#validation">For validators</a></li>
               <li><a href="/developer/samples-jupyter-notebooks.qmd">Code samples</a></li>
               <li><a href="/validmind/validmind.qmd">API Reference</a></li>
             </ul>
