Footer wording tweaks

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -328,7 +328,7 @@ website:
     center:
       - text: |
           <div class="footer-section footer-user-guides">
-            <div class="footer-heading">User Guides</div>
+            <div class="footer-heading">Guides</div>
             <div class="footer-user-guides-columns">
               <ul>
                 <li><a href="/get-started/get-started.qmd">Get started</a></li>
@@ -350,7 +350,7 @@ website:
           </div>
       - text: |
           <div class="footer-section">
-            <div class="footer-heading">ValidMind Library</div>
+            <div class="footer-heading">Library</div>
             <ul>
               <li><a href="/developer/validmind-library.qmd">For developers</a></li>
               <li><a href="/developer/validmind-library.qmd#validation">For validators</a></li>
