Add missing community links

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -381,8 +381,8 @@ website:
             <div class="footer-heading">Community</div>
             <ul>
               <li><a href="https://github.com/validmind/documentation">Github</a></li>
-              <li><a href="#">Slack</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="https://validmind.com/blog/">Blog</a></li>
+              <li><a href="https://docs.validmind.ai/about/contributing/join-community.html" target="_blank">Slack</a></li>
             </ul>
           </div>
 format:
