Comment out testing section, minor cleanup

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -1,6 +1,5 @@
 project:
   type: website
-  # post-render: make generate-sitemap
 
 metadata-files:
   - get-started/_sidebar.yaml
@@ -294,15 +293,15 @@ website:
               file: faq/faq-privacy.qmd
 
 # COMMENT THIS OUT WHEN DONE TESTING
-    - title: "Testing"
-      contents:
-        - internal/testing.qmd
-        - text: "---"
-        - text: "EXPERIMENTS"
-        - file: internal/lightbox.qmd
-        - file: internal/footnotes/footnotes.qmd
-          contents:
-            - internal/footnotes/hover-only.qmd
+    # - title: "Testing"
+    #   contents:
+    #     - internal/testing.qmd
+    #     - text: "---"
+    #     - text: "EXPERIMENTS"
+    #     - file: internal/lightbox.qmd
+    #     - file: internal/footnotes/footnotes.qmd
+    #       contents:
+    #         - internal/footnotes/hover-only.qmd
 
   page-footer:
     background: "#26818B"
@@ -385,6 +384,7 @@ website:
               <li><a href="https://docs.validmind.ai/about/contributing/join-community.html" target="_blank">Slack</a></li>
             </ul>
           </div>
+
 format:
  html:
    grid:
@@ -405,10 +405,6 @@ format:
    link-external-filter: '^https:\/\/(docs\.validmind\.ai|docs-staging\.validmind\.ai|docs-demo\.vm\.validmind\.ai)\/.*'
    lightbox: true
 
-
 filters:
  - tachyons
  - preview
-
-
-
