Footer spacing improvements for guides, wording tweak for developer content to improve formatting

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -329,18 +329,18 @@ website:
           <div class="footer-section footer-user-guides">
             <div class="footer-heading">Guides</div>
             <div class="footer-user-guides-columns">
-              <ul>
+              <ul class="footer-user-guides-column-1">
                 <li><a href="/get-started/get-started.qmd">Get started</a></li>
                 <li><a href="/guide/model-validation/manage-validation-guidelines.qmd">Onboarding</a></li>
                 <li><a href="/guide/guides.qmd">Model Inventory</a></li>
-                <li><a href="/releases/all-releases.qmd">What's new?</a></li>
+                <li><a href="/releases/all-releases.qmd"><small>What's new?</small></a></li>
               </ul>
-              <ul>
+              <ul class="footer-user-guides-column-2">
                 <li><a href="/guide/model-documentation/working-with-model-documentation.qmd">Model documentation</a></li>
                 <li><a href="/guide/model-validation/manage-validation-guidelines.qmd">Model validation</a></li>
                 <li><a href="/guide/model-workflows/working-with-model-workflows.qmd">Model workflows</a></li>
               </ul>
-              <ul>
+              <ul class="footer-user-guides-column-3">
                 <li><a href="/guide/reporting/working-with-analytics.qmd">Reporting</a></li>
                 <li><a href="/guide/monitoring/ongoing-monitoring.qmd">Monitoring</a></li>
                 <li><a href="/guide/attestation/working-with-attestations.qmd">Attestation</a></li>
