--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -34,6 +34,7 @@ runs:
         pip install fairlearn aequitas
         pip install shap==0.44.1
         pip install anywidget
+        pip install scipy==1.10.1
 
     - name: Register validmind kernel
       shell: bash
