--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -29,12 +29,7 @@ runs:
     - name: Install validmind for notebook execution
       shell: bash
       run: |
-        pip install validmind
-        pip install validmind[llm]
-        pip install fairlearn aequitas
-        pip install shap==0.44.1
-        pip install anywidget
-        pip install scipy==1.10.1
+        pip install -r validmind-requirements.txt
 
     - name: Register validmind kernel
       shell: bash
