--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -26,6 +26,9 @@ runs:
         python3 -m pip install jupyter
         python -m pip install --upgrade pip
 
+    - name: Install system dependencies for Kaleido
+      run: sudo apt-get install -y libglib2.0-0 libnss3 libgdk-pixbuf2.0-0 libgtk-3-0 libxss1 libasound2
+
     - name: Install validmind for notebook execution
       shell: bash
       run: |
