--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -28,7 +28,7 @@ runs:
 
     - name: Install system dependencies for Kaleido
       shell: bash
-      run: sudo apt-get install -y libglib2.0-0 libnss3 libgdk-pixbuf2.0-0 libgtk-3-0 libxss1 libasound2
+      run: sudo apt-get install -y libglib2.0-0 libnss3 libgdk-pixbuf2.0-0 libgtk-3-0 libxss1 libasound2t64
 
     - name: Install validmind for notebook execution
       shell: bash
