--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -26,9 +26,29 @@ runs:
         python3 -m pip install jupyter
         python -m pip install --upgrade pip
 
-    - name: Install system dependencies for Kaleido
+    - name: Install system dependencies for Kaleido (Ubuntu 24.04 safe)
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          libglib2.0-0 \
+          libnss3 \
+          libgdk-pixbuf2.0-0 \
+          libgtk-3-0 \
+          libxss1 \
+          libasound2t64 \
+          libxcomposite1 \
+          libxrandr2 \
+          libxdamage1 \
+          libxfixes3 \
+          libxext6 \
+          libxi6 \
+          libx11-xcb1 \
+          libdbus-1-3
       shell: bash
-      run: sudo apt-get install -y libglib2.0-0 libnss3 libgdk-pixbuf2.0-0 libgtk-3-0 libxss1 libasound2t64
+
+    - name: Install Python dependencies
+      run: pip install -r validmind-requirements.txt
+      shell: bash
 
     - name: Install validmind for notebook execution
       shell: bash
