--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -50,6 +50,7 @@ runs:
     - name: Install validmind for notebook execution
       shell: bash
       run: |
+        pip install --upgrade --no-cache-dir numpy==1.25.2
         pip install -r validmind-requirements.txt
 
     - name: Register validmind kernel
