--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -51,7 +51,7 @@ runs:
       shell: bash
       run: |
         pip install --upgrade --no-cache-dir numpy==1.25.2
-        pip install -r validmind-requirements.txt
+        pip install --no-cache-dir -r validmind-requirements.txt
 
     - name: Register validmind kernel
       shell: bash
