--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -38,15 +38,16 @@ jobs:
     - name: Populate installation
       run: cp -r site/_source/installation/site/installation site/installation
 
-    - name: Render demo docs site
-      run: |
-          cd site
-          quarto render --profile development 2>&1 | tee render_errors.log || {
-          echo "Quarto render failed immediately";
-          cat render_errors.log;
-          exit 1;
-          }
-          make generate-sitemap
+    # - name: Render demo docs site
+    #   run: |
+    #       cd site
+    #       quarto render --profile development 2>&1 | tee render_errors.log || {
+    #       echo "Quarto render failed immediately";
+    #       cat render_errors.log;
+    #       exit 1;
+    #       }
+    #       make generate-sitemap
+
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
     - name: Filter changed files
